<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LearningApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Donec auctor neque sed pretium luctus.</string>
    <string name="email_address">Email Address</string>
    <string name="password">******</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Password</string>
    <string name="confirm_password">Confirm Pwd</string>
    <string name="phone_no">+257 *** *** ***</string>
    <string name="send">Send</string>
    <string name="complete">Complete</string>
    <string name="verification">Verification Code</string>

</resources>
