<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="40dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smsVerifyCode"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sms"/>

    <EditText
        android:id="@+id/etPhoneNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/button_style"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnSendVerifyCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/button_style"/>

    <EditText
        android:id="@+id/etVerifyCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verification"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/button_style"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnCompltVerifyCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/button_style"/>


</LinearLayout>