<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="40dp">

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/etFullNameRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/button_style"
        android:gravity="center" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/button_style"
        android:gravity="center" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/button_style"
        android:gravity="center" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/button_style"/>

</LinearLayout>